# euphonium

./: .clangd  .dockerignore  .gitignore  .gitmodules  404.html  Dockerfile  README.md  default.nix  euph-build.json  flake.nix  index.html  mkdocs.yml  package.json  requirements.txt  result  sitemap.xml  tsconfig.json  webpack.config.base.ts  webpack.config.dev.ts  webpack.config.prod.ts
berry/: CMakeLists.txt
berry/generate/: be_const_strtab.h  be_const_strtab_def.h  be_fixed_be_class_map.h  be_fixed_debug.h
berry/src/: be_api.d  be_baselib.d  be_bytecode.d  be_byteslib.d  be_class.d  be_code.d  be_debug.d  be_debug.h  be_debuglib.d  be_exec.d  be_filelib.d  be_func.d  be_gc.d  be_gclib.d  be_globallib.d  be_introspectlib.d  be_jsonlib.d  be_lexer.d  be_libs.d  be_list.d  be_listlib.d  be_map.d  be_maplib.d  be_mathlib.d  be_mem.c  be_mem.d  be_module.d  be_object.d  be_oslib.d  be_parser.d  be_port.c  be_rangelib.d  be_repl.d  be_solidifylib.d  be_strictlib.d  be_string.d  be_strlib.d  be_syslib.d  be_timelib.d  be_var.d  (+3 more)
euphonium/: CMakeLists.txt
euphonium/include/: AudioOutput.h  AudioProcessors.h  BerryBind.h  CircularBuffer.h  Core.h  CoreEvents.h  DupaService.h  EqualizerProcessor.h  EuphoniumLog.h  EventBus.h  HTTPModule.h  HTTPServer.h  JSON.h  MainAudioBuffer.h  Module.h  PlatformConstants.h  ScriptLoader.h  Service.h  SoftwareVolumeProcessor.h  Systeminfo.h  TimerDispatcherTask.h  UserDSPProcessor.h
euphonium/include/plugins/: CSpotPlugin.h  CliFile.h  FakeAudioSink.h
euphonium/include/plugins/cspot/: CSpotPlugin.h  FakeAudioSink.h
euphonium/include/plugins/http/: HTTPDevTools.h  HTTPEvents.h  HTTPModule.h  HTTPServer.h
euphonium/include/plugins/jellyfin/: JellyfinHTTPAudioStream.h  JellyfinPlugin.h
euphonium/include/plugins/mqtt/: MQTTPlugin.h  mqtt_pal.h
euphonium/include/plugins/persistor/: ConfigPersistor.h
euphonium/include/plugins/snapcast/: SnapcastConnection.h  SnapcastMessage.h  SnapcastPlugin.h
euphonium/include/plugins/webradio/: HTTPAudioStream.h  HTTPStream.h  WebRadioPlugin.h
euphonium/include/plugins/youtube/: DIALServer.h  SSDPListener.h  YouTubeLeanHandler.h  YouTubePlugin.h
euphonium/lua/: app.lua  config_server.lua  cspot_plugin.lua  http.lua  json.lua  youtube_plugin.lua
euphonium/protocol/: configuration_api_service.proto  dupa_service.proto
euphonium/scripts/: app.be  cspot_plugin.be  dac.config.json  extensions.be  http.be  ota_manifest.json  scripts-version  webradio_plugin.be  wifi.config.json  youtube_plugin.be
euphonium/scripts/configuration/: cspot.config.json
euphonium/scripts/desktop/: portaudio_plugin.be
euphonium/scripts/esp32/: bluetooth.be  boards.be  dac_driver.be  dac_plugin.be  gpio.be  hardware_plugin.be  i2c.be  i2s.be  init.be  led_strip.be  ota.be  platform.be  wifi.be
euphonium/scripts/esp32/dacs/: ac101_driver.be  es8388_driver.be  i2s_driver.be  internal_driver.be  jp2137_driver.be  ma12070p_driver.be  tas5711_driver.be
euphonium/scripts/internal/: api.be  bindings.be  dsp.be  equalizer.be  euphonium.be  form_ctx.be  general_settings.be  init.be  plugin.be  util.be
euphonium/scripts/plugin/: cspot.be  jellyfin.be  mqtt.be  snapcast.be  webradio.be  youtube.be
euphonium/sol/: forward.hpp  sol.hpp
euphonium/src/: BerryBind.cpp  CircularBuffer.cpp  ConfigurationApiService.cpp  Core.cpp  EuphoniumLog.cpp  EventBus.cpp  HTTPModule.cpp  HTTPServer.cpp  JSON.cpp
euphonium/src/plugins/: CSpotPlugin.cpp  CliFile.cpp  FakeAudioSink.cpp
euphonium/src/plugins/cspot/: CSpotPlugin.cpp  FakeAudioSink.cpp
euphonium/src/plugins/http/: HTTPDevTools.cpp  HTTPInstance.cpp  HTTPModule.cpp  HTTPServer.cpp
euphonium/src/plugins/jellyfin/: JellyfinHTTPAudioStream.cpp  JellyfinPlugin.cpp
euphonium/src/plugins/mqtt/: MQTTPlugin.cpp  mqtt_pal.c
euphonium/src/plugins/persistor/: ConfigPersistor.cpp
euphonium/src/plugins/snapcast/: SnapcastConnection.cpp  SnapcastMessage.cpp  SnapcastPlugin.cpp
euphonium/src/plugins/webradio/: HTTPAudioStream.cpp  HTTPStream.cpp  WebRadioPlugin.cpp
euphonium/src/plugins/youtube/: DIALServer.cpp  SSDPListener.cpp  YouTubeLeanHandler.cpp  YouTubePlugin.cpp
picoaudio/: CMakeLists.txt
picoaudio/include/: ConfigurationApiService.h  Core.h  EventBus.h  HTTPServer.h  JSON.h  Service.h
picoaudio/protos/: AnyRefImpl.cpp  ReflectTypeInfo.cpp  ReflectionInternal.h  configuration_api_service.h  dupa_service.h  protobuf.h
picoaudio/src/: HTTPServer.cpp  Service.cpp
src/: CMakeLists.txt  common.less  dacs.json  index.tsx  requirements.txt
src/App/: index.tsx
src/berry/generate/: be_const_strtab_def.h
src/core/: CMakeLists.txt
src/euph-build/: package.json  tsconfig.json
src/euph-build/src/: cli.js
src/euphonium/: CMakeLists.txt
src/euphonium/bell/: .gitmodules  CMakeLists.txt  README.md
src/euphonium/include/: BerryBind.h  Core.h  EventBus.h  ScriptLoader.h  SoftwareVolumeProcessor.h
src/euphonium/scripts/: extensions.be
src/euphonium/src/: BerryBind.cpp  CircularBuffer.cpp  Core.cpp  EuphoniumLog.cpp
src/euphonium/web/: index.html  package-lock.json  vite.config.ts
src/frontend/: default.nix  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/frontend/nix/: node-packages.nix
src/frontend/src/: index.css  main.tsx
src/targets/cli/: CMakeLists.txt  DesktopAudioOutput.cpp  DesktopAudioOutput.h  FileScriptLoader.cpp  PortAudioAudioOutput.cpp  compile_commands.json  main.cpp  package.c
src/targets/esp32/: .clangd  CMakeLists.txt  build_recovery.sh  flash_euphonium.sh  fs  generate_full_build.sh  monitor.sh  partitions.csv  rebuild_web.sh  reflash_spiffs.sh  scripts.tar  scripts_checksum.txt  sdkconfig  sdkconfig.old
src/web-ui/: index.html  package-lock.json  package.json  tailwind.config.js  test.html  vite.config.ts
src/web-ui/src/: index.css  main.tsx
targets/cli/: CMakeLists.txt  FileScriptLoader.cpp  FileScriptLoader.h  PortAudioAudioOutput.cpp  PortAudioAudioOutput.h  euphoniumcli  main.cpp
targets/cli/cmake/: build_web.sh
targets/cli/euphonium/: Makefile  cmake_install.cmake
(+1164 files in other folders)
